# AgentSlayer

./: .gitignore  README.md  pyproject.toml
docs/design/: architecture.md  protocol.md  research-clipboard.md  research-paste-limits.md  research-textual.md  skills.md  tui.md
src/agentclip/: __init__.py  __main__.py  cli.py  config.py
src/agentclip/app/: __init__.py  controller.py  types.py  view.py
src/agentclip/clip/: base.py  copykitten_provider.py  fake.py  pyperclip_provider.py  watcher.py  winseq.py
src/agentclip/engine/: approval.py  engine.py  results.py  states.py
src/agentclip/protocol/: composer.py  parser.py  spec.py  types.py
src/agentclip/store/: backups.py  session.py
src/agentclip/tools/: fs_tools.py  meta.py  registry.py  sandbox.py  shell.py  skills.py
src/agentclip/tui/: __init__.py  app.py  messages.py
tests/: conftest.py  test_layering.py  test_skills.py
tests/clip/: test_providers.py  test_real_clipboard.py  test_watcher.py
tests/engine/: test_approval.py  test_results.py  test_roundtrip.py  test_state_machine.py
tests/protocol/: test_composer.py  test_parser_golden.py  test_spec.py
tests/protocol/golden/: 001-two-calls-fenced.input.txt  002-two-calls-crlf-nofence.expected.json  002-two-calls-crlf-nofence.input.txt  010-fenced-blocks.expected.json  010-fenced-blocks.input.txt  011-crlf.expected.json  011-crlf.input.txt  012-bom.expected.json  (+24 more)
tests/store/: test_backups.py  test_session.py
tests/tools/: test_fs_tools.py  test_registry.py  test_sandbox.py  test_shell.py
tests/tui/: test_chat_ui.py  test_smoke.py
(+13 files in other folders)
